nginx-ingress/nginx-ingress-test01.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-dash-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - host: kube-dash.icsdemo.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 8443
